# Python-learning

./: .justfile  .pre-commit-config.yaml  .prettierignore  LICENSE  README.md  pyproject.toml
.github/workflows/: check.yml  fmt.yml
basic/chapter01/: main.py  pyproject.toml
basic/chapter02/: main.py  pyproject.toml
basic/chapter03/: main.py  pyproject.toml
basic/chapter04/: main.py  pyproject.toml
chapter01/: main.py
