[project]
name = "python-learning"
version = "0.1.0"
description = "Python learning notes"
authors = [{ name = "Terakomari", email = "im.terakomari@icloud.com" }]
dependencies = ["loguru>=0.7.1", "requests>=2.31.0"]
readme = "README.md"
requires-python = ">= 3.11"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.rye]
managed = true
dev-dependencies = [
  "black>=23.7.0",
  "mypy>=1.5.1",
  "ruff>=0.0.287",
  "pytest>=7.4.1",
]

[tool.hatch.metadata]
allow-direct-references = true
