[project]
name = "python-learning"
version = "0.1.0"
description = "Python learning notes"
authors = [{ name = "Terakomari", email = "im.terakomari@icloud.com" }]
dependencies = ["loguru>=0.7.2"]
readme = "README.md"
requires-python = ">= 3.12"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.metadata]
allow-direct-references = true

[tool.rye]
managed = true
dev-dependencies = ["pyright>=1.1.332", "ruff>=0.1.2", "pytest>=7.4.3"]

[tool.pyright]
pythonVersion = "3.12"
